--- a/CSS/index.css
+++ b/CSS/index.css
@@ -103,6 +103,7 @@ a{
   flex-grow: 1;
   align-items: center;
   justify-content: center;
+  gap: 2em;
   
 }
 #sell-phase{
@@ -112,55 +113,4 @@ a{
   font-weight: bold;
   padding-top: 110px;
   /* color:rgba(195,133,33,255); */
-}
-#call-to-action{
-  position: relative;
-  background: #fff;
-  color: #fff;
-  text-transform: uppercase;
-  font-size: 1.5em;
-  letter-spacing:0.1em;
-  font-weight: 400;
-  padding: 10px 30px;
-  transition: 0.5s;
-}
-#call-to-action:hover 
-{
-  background: var(--clr);
-  color: var(--clr) ;
-  letter-spacing: 0.2em; 
-  box-shadow: 0 0 35px var(--clr);
-}
-
-#call-to-action:before{
-  content:"";
-  position: absolute;
-  inset:2px;
-  background:#27282c ;
-}
-#call-to-action span {
-  position: relative;
-  z-index: 1;
-}
-#call-to-action i {
-  position: absolute;
-  inset:0;
-  display: block;
-} 
-#call-to-action i::before {
-  content: '';
-  position: absolute;
-  top:0;
-  left: 80%;
-  width:10px;
-  height:4px;
-  background: #27282c;
-  transition: 0.5s;
-  transform:translateX(-50%)skewX(325deg);
-
-
-}
-#call-to-action::hover, i::before{
-  width: 20px;
-  left:20%;
 }
