--- a/CSS/index.css
+++ b/CSS/index.css
@@ -7,12 +7,7 @@
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  outline: auto;
-  /* background-color: rgb(31,4,4);  */
- 
-  justify-content:space-between;
+  min-height: 100%;
 }
  
 .header {
@@ -24,13 +19,16 @@ body {
   height: 100svh;
   color: white;
   background-color:gray;
+  
   background-image:url("../Images/Heroimage-transformed.jpeg");
+  background-position-x: 46%;
   background-size: cover;
   background-blend-mode:multiply}
 
 }
 .logo-container {
   background-blend-mode: multiply;
+  flex-shrink: 1;
   height: 0px;
 }
 
@@ -109,7 +107,10 @@ a{
   gap:10em;
 
 }
-.part-two {
+.part {
+  padding: 50px;
+}
+.part.two {
   
   height:100vh ;
   display: flex;
@@ -167,22 +168,28 @@ a{
 }
 
 
-.part-three {
+.part.three {
   height:100vh;
   background-color: #5f1b17;
   display: flex;
   flex-direction: column;
-
+  flex-wrap: wrap;
+ 
 }
-.cards{
+.three-content{
   display: flex;
-  margin-top: 10%;
-  margin-left: 5%;
-  gap: 2em;
+  flex-grow: 1;
+}
+
+.cards {
+  display: flex;
+  flex-direction: column;
+
 }
 .card {
   color: white;
 }
+
 .footer {
   height:50vh;
   height: 50svh;
