--- a/CSS/Benefits.css
+++ b/CSS/Benefits.css
@@ -2,13 +2,90 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  width: 1000px;
+  position: relative;;
   
 
 } 
-.card {
-  width: 600px;
+.cards-container .card {
+  position: relative;
+  width: 500px;
   font-size: 40px;
-  color: white;
-  margin-top: 20px; 
-  
+  color: black;
+}
+.cards-container .card .face {
+
+  width: 500px;
+  height: 800px;
+  transition: 0.5s;
+
+
+}
+.cards-container .card .face.face1 {
+  position: relative;
+  background: #333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  transform: translateY(100px);
+
+}
+.cards-container .card:hover .face.face1 {
+  background: #ff0057;
+  transform: translateY(0)
+}
+.cards-container .card .face.face1 .card-inside-content{
+  opacity: 0.2;
+  transition: 0,5s;
+}
+.cards-container .card:hover .face.face1 .card-inside-content {
+  opacity: 1;
+
+}
+.cards-container .card .face.face1 .card-inside-content img{
+  max-width: 100px;
+}
+.cards-container .card .face.face1 .card-inside-content h3{
+  margin: 10px 0 0;
+  padding: 0;
+  color: #fff;
+  text-align: center;
+  font-size: 1.5em;
+
+}
+.cards-container .card .face.face2{
+  position: relative;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items:center;
+  padding:20px;
+  box-sizing: border-box;
+  box-shadow: 0 20px 50px rgba(0,0,0,0.8);
+  transform: translateY(-100px);
+}
+.cards-container .card:hover.face.face2{
+  transform: translateY(0);
+
+}
+.cards-container .card .face.face2 .card-inside-content p{
+  margin: 0;
+  padding: 0;
+
+}
+.cards-container .card .face.face2 .card-inside-content a{
+  margin: 15px 0 0;
+  display:inline-block;
+  font-weight: 900;
+  color: #333;
+  padding: 5px;
+  border: 1px solid #333;
+
+}
+.cards-container .card .face.face2 .card-inside-content a:hover{
+  background: #333;
+  color: #fff;
+
+
 }
