--- a/CSS/index.css
+++ b/CSS/index.css
@@ -11,19 +11,20 @@ html{
 
 body {
   flex-grow: 1;
+
   
 }
  
 .header {
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
   font-size: 16px;
   padding: 15px;
   min-height: 100vh;
   min-height: 100svh;
   color: white;
   background-color:gray;
-  
   background-image:url("../Images/Heroimage-transformed.jpeg");
   background-position-x: 46%;
   background-size: cover;
@@ -180,20 +181,7 @@ a{
   flex-direction: column;
  
 }
-.cards-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  
 
-} 
-.card {
-  width: 600px;
-  font-size: 40px;
-  color: white;
-  margin-top: 20px; 
-  
-}
 
 .footer {
   height:50vh;
