--- a/CSS/index.css
+++ b/CSS/index.css
@@ -129,7 +129,10 @@ a{
   color: white;
   font-weight: 900;
   justify-content: center;
-  padding: 50px;
+ 
+}
+.text-information-header.one{
+   padding: 50px;
 }
 .two-content {
   display: flex;
@@ -181,6 +184,10 @@ a{
   flex-direction: column;
  
 }
+.text-information-header-three{
+ padding: 100px;
+}
+
 
 
 .footer {
