--- a/Ideas/Benefits.css
+++ b/Ideas/Benefits.css
@@ -1,9 +1,7 @@
 .cards-container {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  width: 1000px;
-  position: relative;;
+  flex-direction: column;
+  align-items: center;
   
 
 } 
@@ -14,26 +12,28 @@
   color: black;
 }
 .cards-container .card .face {
-
-  width: 500px;
-  height: 800px;
   transition: 0.5s;
+  width: 800px;
+  height: 500px;
 
 
 }
 .cards-container .card .face.face1 {
   position: relative;
-  background: #333;
+  background: #583d3d;
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 1;
-  transform: translateY(100px);
+  transform: translateY(80%);
 
 }
 .cards-container .card:hover .face.face1 {
-  background: #ff0057;
-  transform: translateY(0)
+  background: #5f1b17;
+  width: 200px;
+  height: 200px;
+  transform: translateX(0);
+  transition:1s;
 }
 .cards-container .card .face.face1 .card-inside-content{
   opacity: 0.2;
@@ -46,17 +46,17 @@
 .cards-container .card .face.face1 .card-inside-content img{
   max-width: 100px;
 }
-.cards-container .card .face.face1 .card-inside-content h3{
+ .cards-container .card .face.face1 .card-inside-content h3{
   margin: 10px 0 0;
   padding: 0;
   color: #fff;
   text-align: center;
   font-size: 1.5em;
 
-}
+} 
 .cards-container .card .face.face2{
-  position: relative;
   background: #fff;
+  position: relative;
   display: flex;
   justify-content: center;
   align-items:center;
