--- a/CSS/Benefits-two.css
+++ b/CSS/Benefits-two.css
@@ -2,71 +2,92 @@
 
 .cards-container {
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
+  flex-wrap: wrap;
   align-items: center;
-  gap: 4em;
+  padding: 0;
 }
 .card{
   display: flex;
+  flex-direction: column;
+
+
 
 }
 .card .face {
-  width: 400px;
-  height: 400px;
+  width: 282px;
+  height: 250px;
 }
-.card .face1{ 
+.card .face1{
   background-color: #27282c;
   position: relative;
   display: flex;
   color: white;
   justify-content: center;
-  align-content: center; 
+  align-content: center;
   z-index: 1;
-  transform: translateX(50%)
+  transition: 0.5s;
+  transform: translateY(50%);
+  box-shadow:0px 10px 10px #27282c;
 }
 .card:hover .face1 {
   position: relative;
   background-color: #ff1867;
   z-index: 1;
-  transition: 0.5s;
-  transform: translateX(0)
+  transform: translateY(0)
 
 }
 .card .face1 .card-inside-content{
-  opacity: 0.2;
-  transition: 0,5s;
- 
-}
-
-.card:hover .face1 .card-inside-content{
+  display: flex;
+  height: 220px;
+  text-align: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: end;
+  font-size: 25px;
   
+
+
 }
-.card .face1 .card-inside-content img{
+.fa-2xl {
+  position: absolute;
+  top: 110px;
+  z-index: 0;
+  font-size: 4em;
+
+
 
 }
 .card .face1 .card-inside-content h3{
+  display: flex;
   position: relative;
-
+  font-size: 1.32em;;
+  font-weight: 700;
+  opacity: 0.02;
 }
-
+.card:hover .face1 .card-inside-content h3{
+  opacity: 1;
+}
 
 
 .card .face2 {
   background-color: white;
   display: flex;
   flex-direction: column;
-  padding: 50px;
-  padding-bottom: 90px;
-  transform: translateX(-50%);
-  
-}
-.card:hover .face2{
-  transform: translateY(0);
+  padding: 10px;
+  transform: translateY(-50%);
+  transition: 0.5s;
 
 }
+.card:hover .face2{
+  transform: translateX(0);
+
+}
+.card .face2 .card-inside-content{
+   flex-grow: 1;
+}
 .card .face2 .card-inside-content p{
-  
-  gap: 2em;
+
   flex-direction: column;
-  font-size: 25px;
+  font-size: 20px;
 }
