--- a/CSS/index.css
+++ b/CSS/index.css
@@ -8,19 +8,23 @@
 html{
   display: flex;
 }
+.container{
+  border:5px solid black;
+  padding: 5px 20px;
+}
 
 body {
   flex-grow: 1;
 
   
 }
+
  
 .header {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
   font-size: 16px;
-  padding: 15px;
   min-height: 100vh;
   min-height: 100svh;
   color: white;
@@ -28,47 +32,34 @@ body {
   background-image:url("../Images/Heroimage-transformed.jpeg");
   background-position-x: 46%;
   background-size: cover;
-  background-blend-mode:multiply}
-
+  background-blend-mode:multiply;
 }
 .logo-container {
   background-blend-mode: multiply;
   flex-shrink: 1;
-  height: 0px;
 }
 
 .logo{
-  padding: 0px;
   width: auto;
-  height: 100px;
+  height: 90px;
 
 
 }
 .links{
   display: flex;
   justify-content: space-between;
+  align-items: center;
   flex-direction:row;
-  padding-top: 20px;
-  padding-bottom: 10px;
-  margin-left: 70.5px;
-  margin-right: 70.5px;
-
-}
-nav{
-  display: flex;
-  height: 0PX;
+  padding: 0;
 
 }
 ul{
   display: flex;
   gap:3em;
-  height: 0PX;
 }
 
 li{
   list-style: none;
-  padding: 15px;
-  height: 0px;
   font-size: 20px;
 }
 a{
@@ -78,14 +69,6 @@ a{
 #cost{
  color: white;
 
-}
-.button {
-  display: flex;
-  flex-direction: column;
-  padding-top: 10px;
-}
-.search-icon {
-  width: 25px;
 }
 .hero-text {
   display: flex;
@@ -107,23 +90,19 @@ a{
 #sub-sell-phase {
   display: flex;
   flex-direction: column;
-
   font-size: 25px;
 }
 .content{
   background-color: #9b3228;
-  gap:10em;
-
 }
 .part {
-  padding: 50px;
-}
-.part.two {
   display: flex;
   flex-direction: column;
-  background-color: #9b3228;
+  flex-wrap: wrap;
+  gap: 3em;
 }
 .text-information-header {
+  padding: 50px 0px;
   display: flex;
   font-size: 40px;
   color: white;
@@ -131,61 +110,45 @@ a{
   justify-content: center;
  
 }
-.text-information-header.one{
-   padding: 50px;
-}
 .two-content {
   display: flex;
-  justify-content: center;
+  padding: 0;
   align-items: center;
   gap: 5em;
-  flex-wrap: wrap;
+  flex-wrap: wrap; 
 
 }
 #image-container-one{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 1000px;
-
-
-
 }
 #personalize-image {
-   width:100%;
-   background-color:gray;
+   background-color:gray; 
+   width: 900px;
 
 }
 
-.text-information{
+ .text-information{
   display: flex;
   flex-direction: column;
   color: white;
-  width: 400px;
+  width: 200px;
   flex-grow: 1;
   gap: 2vh;
-  padding-bottom: 10px;
+  /* padding-bottom: 10px; */
 
-}
-.inside-text-information-header{
+} 
+ .inside-text-information-header{
   display: flex;
   align-items: center;
   font-size: 40px;
 }
-.inside-text-information-text{
+/* .inside-text-information-text{
   flex-grow: 1;
   font-size: 30px;
-}
+}  */
 
 
 .part.three {
   background-color: #5f1b17;
-  display: flex;
-  flex-direction: column;
- 
-}
-.text-information-header-three{
- padding: 100px;
 }
 
 
