--- a/CSS/index.css
+++ b/CSS/index.css
@@ -9,7 +9,7 @@ body{
   width: 100%;
 }
 .container{
-  border:5px solid black;
+  /* border:5px solid black; */
 }
 
 .header {
@@ -26,9 +26,16 @@ body{
   background-size: cover;
   background-blend-mode:multiply;
 }
+.links{
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0;
+
+}
 .logo-container {
   background-blend-mode: multiply;
-  /* flex-shrink: 1; */
 }
 
 .logo{
@@ -37,27 +44,29 @@ body{
 
 
 }
-.links{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-direction:row;
-  padding: 0;
+
+nav{
+  flex-shrink: 0;
 
 }
+
 ul{
   display: flex;
-  flex-wrap: nowrap;
   gap:3em;
 }
 
 li{
+  display: flex;
   list-style: none;
   font-size: 20px;
 }
 a{
   text-decoration: none;
   color: inherit;
+}
+#search-icon{
+  position: relative;
+  padding-top: 10px;
 }
 #cost{
  color: white;
@@ -73,7 +82,7 @@ a{
 
 }
 #sell-phase{
-  font-size: 50px;
+  font-size: 40px;
   display: flex;
   align-items: center;
   text-align: center;
@@ -93,12 +102,13 @@ a{
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  gap: 3em;
+  gap: 1.5em;
+  padding-bottom: 50px;
 }
 .text-information-header {
-  padding: 50px 0px;
+  padding: 40px 0px;
   display: flex;
-  font-size: 40px;
+  font-size: 30px;
   color: white;
   font-weight: 900;
   justify-content: center;
@@ -109,6 +119,7 @@ a{
   padding: 0;
   align-items: center;
   flex-wrap: wrap; 
+  gap: 1em;
 
 }
 #personalize-image {
@@ -122,7 +133,7 @@ a{
   flex-direction: column;
   color: white;
   flex-grow: 1;
-  gap: 2vh;
+  gap: 2em;
   width: 200px;
   height: 450px;
   padding: 20px;
@@ -131,8 +142,9 @@ a{
 } 
  .inside-text-information-header{
   display: flex;
+  justify-content: center;
   text-align: center;
-  font-size: 40px;
+  font-size: 30px;
 }
 .inside-text-information-text p{
   font-size: 30px;
