--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,3 +1,13 @@
+:root{
+  --fs-500:65px;
+  --fs-400:40px;
+  --fs-300:30px;
+  --fs-250:25px;
+  --fs-200:20px;
+  
+}
+
+
 *{
   box-sizing: border-box;
   margin: 0;
@@ -55,7 +65,7 @@ ul{
 li{
   display: flex;
   list-style: none;
-  font-size: 20px;
+  font-size: var(--fs-200);
 }
 a{
   text-decoration: none;
@@ -78,7 +88,7 @@ a{
 
 }
 #sell-phase{
-  font-size: 40px;
+  font-size: var(--fs-400);
   display: flex;
   align-items: center;
   text-align: center;
@@ -89,7 +99,7 @@ a{
 #sub-sell-phase {
   display: flex;
   flex-direction: column;
-  font-size: 25px;
+  font-size: var(--fs-250);
 }
 .content{
   background-color: #9b3228;
@@ -104,7 +114,7 @@ a{
 .text-information-header {
   padding: 40px 0px;
   display: flex;
-  font-size: 30px;
+  font-size: var(--fs-300);
   color: white;
   font-weight: 900;
   justify-content: center;
@@ -141,10 +151,10 @@ a{
   display: flex;
   justify-content: center;
   text-align: center;
-  font-size: 30px;
+  font-size: var(--fs-300);
 }
 .inside-text-information-text p{
-  font-size: 30px;
+  font-size: var(--fs-300);
 } 
 
 
