--- a/CSS/Benefits-two.css
+++ b/CSS/Benefits-two.css
@@ -1,9 +1,9 @@
 :root{
-  --fs-500:65px;
-  --fs-400:40px;
-  --fs-300:30px;
-  --fs-250:25px;
-  --fs-200:20px;
+  --fs-650:6.5rem;
+  --fs-400:4rem;
+  --fs-300:3rem;
+  --fs-250:2.5rem;
+  --fs-200:2.0rem;
   
 }
 
@@ -52,7 +52,7 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: end;
-  font-size:var(--fs-250);
+  font-size:2rem;
   
 
 
