--- a/CSS/index.css
+++ b/CSS/index.css
@@ -7,7 +7,7 @@ html{
   --fs-400:4rem;
   --fs-300:3rem;
   --fs-250:2.5rem;
-  --fs-200:2.0rem;
+  --fs-200:2rem;
   
 }
 
@@ -24,9 +24,10 @@ body{
 }
 .container{
   /* border:5px solid black; */
+  padding: 0 var(--fs-400);
 }
 
-.header {
+.Hero {
   display: flex;
   text-align: center;
   flex-direction: column;
@@ -45,7 +46,6 @@ body{
   flex-wrap: nowrap;
   justify-content: space-between;
   align-items: center;
-  padding: 0;
 
 }
 .logo-container {
@@ -63,13 +63,13 @@ nav{
 
 ul{
   display: flex;
-  gap:var(--fs-650);
+  gap:var(--fs-200);
 }
 
 li{
   display: flex;
   list-style: none;
-  font-size: var(--fs-200);
+  font-size: var(--fs-250);
 }
 a{
   text-decoration: none;
@@ -88,7 +88,7 @@ a{
   flex-grow: 1;
   align-items: center;
   justify-content: center;
-  gap: 2em;
+  gap: var(--fs-200);
 
 }
 #sell-phase{
@@ -108,12 +108,12 @@ a{
 }
 .part {
   display: flex;
+  align-items: center;
   flex-direction: column;
-  flex-wrap: wrap;
-  gap: 1.5em;
+  padding: var(--fs-200) var(--fs-300) var(--fs-400);
+  gap: var(--fs-300);
 }
 .text-information-header {
-  padding: 1.5em 1em ;
   display: flex;
   font-size: var(--fs-300);
   color: white;
@@ -126,16 +126,15 @@ a{
   flex-wrap: wrap;
   color: white;
   font-size: var(--fs-300);
-  padding:var(--fs-200);
   gap:var(--fs-300);
 
 }
 .personalize-image{
-  width: 63%;
+  width: 72%;
 }
 
  .text-information{
-  width:34%;
+  width:25%;
   color: white;
   gap: 2em;
 
