--- a/CSS/Benefits-two.css
+++ b/CSS/Benefits-two.css
@@ -1,16 +1,7 @@
-:root{
-  --fs-650:6.5rem;
-  --fs-400:4rem;
-  --fs-300:3rem;
-  --fs-250:2.5rem;
-  --fs-200:2.0rem;
-  
-}
-
 
 .cards-container {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   flex-wrap: wrap;
   align-items: center;
   padding: 0;
