<fix>[Make Webside Responsive]:<Change media queries to px and fix values > [Changed root values,make part 3 responsive to 2560px 2050px 1600px 1410px 1100px and  add a bar icon in 700px ]

--- a/CSS/Benefits-two.css
+++ b/CSS/Benefits-two.css
@@ -5,6 +5,7 @@
   flex-wrap: wrap;
   align-items: center;
   padding: 0;
+  gap: var(--fs-200)
 }
 .card{
   display: flex;
@@ -38,12 +39,11 @@
 }
 .card .face1 .card-inside-content{
   display: flex;
-  height: 220px;
   text-align: center;
-  flex-wrap: wrap;
   justify-content: center;
-  align-items: end;
+  align-items: center;
   font-size:2rem;
+  flex-direction: column;
   
 
 
@@ -88,5 +88,5 @@
 .card .face2 .card-inside-content p{
 
   flex-direction: column;
-  font-size: 20px;
+  font-size: 2rem;
 }
