--- a/CSS/index.css
+++ b/CSS/index.css
@@ -147,24 +147,31 @@ a{
 
 
 
-.footer {
-  height:50vh;
-  height: 50svh;
+.footer { 
   background-color: black;
+  color: white;
+  flex-direction: row;
+}
+.footer .section.one{
   display: flex;
+  flex-direction: column;
+  width: 20%;
+  gap: 1rem;
 }
 .footer-logo-container{
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 20%;
-
-
 }
 #footer-logo {
   width:100%;
 }
 #slogan {
-  color: white;
-  font-size: 2rem;
+  font-size: var(--fs-250);
+}
+#mission{
+  font-size: var(--fs-250);
+}
+.footer .section .two{
+
 }
