--- a/CSS/index.css
+++ b/CSS/index.css
@@ -172,6 +172,45 @@ a{
 #mission{
   font-size: var(--fs-250);
 }
-.footer .section .two{
-
+.section.two{
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  min-height:28rem;
+  padding: 2rem;
 }
+.footer-links{
+  display: flex;
+  justify-content: space-around;
+  
+}
+.footer-links-colums,.footer-links span ul{
+  display: flex;
+  flex-direction: column;
+}
+.footer-links h3{
+  font-size: var(--fs-250);
+}
+.footer-links li {
+  font-size:var(--fs-200) ;
+}
+.footer-links span{
+  gap: 1rem;
+}
+.footer-links i{
+  font-size: 2rem;
+}
+.social-media{
+  display: flex;
+}
+.social-media p {
+  font-size: var(--fs-200);
+}
+
+
+
+
+
+
+
+
