--- a/CSS/Media-Queries.css
+++ b/CSS/Media-Queries.css
@@ -265,6 +265,7 @@
     .call-to-action-smaller {
       font-size: 1.5rem;
     }
+    
    
     
 }
@@ -301,6 +302,46 @@
   .card .face2 {
     height:30rem;
   }
+  .footer{
+    flex-direction: column;
+  }
+  .footer .section.one{
+    width: 100%;
+    align-items: center;
+  }
+  img.footer-logo{
+    width:50%;
+  }
+  .mission {
+    text-align:center;
+  }
+
+  .footer-links{
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 1rem;
+
+  }
+  .footer-links-colums, .footer-links span ul{
+    align-items: center;
+  }
+  .contacts{
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .contacts span {
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    font-weight: 700;
+  }
+  .contacts i{
+    font-size: var(--fs-300);
+  }
+ 
+
+
 
 
 
